<resources>
    <string name="app_name">TrackQueuer</string>
    <string name="noClientInfoFound">No client info found.</string>
    <string name="uriTitle">Your queue ID:</string>
    <string name="share">Share</string>
    <string name="pullSongsError">Error while retrieving queue.</string>
    <string name="refreshButton">Refresh queue</string>
    <string name="pullSongsSuccess">Successfully updated queue.</string>
    <string name="refreshing">Refreshing...</string>
    <string name="loading">Loading...</string>
    <string name="newQueue">New queue</string>
    <string name="newQueueConfirmMessage">Are you sure you want to create a new queue? This means your current queue will be deleted.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="syncServiceStarted">TrackQueuer has started syncing your queue.</string>
    <string name="syncServiceStopped">TrackQueuer has stopped syncing your queue.</string>
    <string name="autoRefresh">Auto Refresh</string>
    <string name="loggedOut">Not logged in</string>
    <string name="loggedOutDesc">Your Spotify is not logged in. For this app to work, you have to be logged in.</string>
    <string name="login">Log in</string>
    <string name="cancel">Cancel</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got it!</string>
    <string name="intro_title_1">Thanks for downloading!</string>
    <string name="intro_desc_1">Using TrackQueuer, you can let other people add songs to your Spotfiy queue.</string>
    <string name="intro_desc_1_no_spotify">To use TrackQueuer, you first need the Spotify app to continue.</string>
    <string name="download">Download</string>
    <string name="refresh">Refresh</string>
    <string name="intro_title_2">Log in using Spotify</string>
    <string name="intro_desc_2">Start by authorizing our app by logging in into your Spotify account, so we are able to add songs to your queue.</string>
    <string name="intro_title_3">Share the link!</string>
    <string name="intro_desc_3">When they click on it, they can look up songs in the Spotify library and then add them to your Spotify queue!</string>
    <string name="history">History</string>
</resources>
