<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.gussio.trackqueuer.MainActivity">

    <TextView
        android:id="@+id/uriText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uriTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/loading"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/uriTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:text="@string/uriTitle" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uriText"
        android:layout_centerHorizontal="true"
        android:text="@string/share" />

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shareButton"
        android:layout_centerHorizontal="true"
        android:text="@string/refreshButton" />

    <Button
        android:id="@+id/newUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refreshButton"
        android:layout_centerHorizontal="true"
        android:text="@string/newQueue" />

    <Switch
        android:id="@+id/autoRefreshSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newUri"
        android:layout_centerHorizontal="true"
        android:checked="true"
        android:text="@string/autoRefresh" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="307dp"
        android:text="@string/history" />

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/history"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:scrollbars="vertical" />

</RelativeLayout>
